# credit

./: .gitignore  README.md  pyproject.toml
artifacts/demo_fit/: calibration_fit.csv  channel_contributions_sample.csv  fit_quality.csv  fit_summary.json  mcmc_diagnostics.csv  roi.csv
calmmm/: __init__.py
calmmm/attribution/: contributions.py  curves.py  roi.py
calmmm/calibration/: __init__.py  lift.py  likelihood.py  targets.py
calmmm/data/: containers.py  schema.py  validation.py
calmmm/model/: __init__.py  components.py  coords.py  fit.py  mmm.py  priors.py  transforms.py
calmmm/reporting/: __init__.py  visualization.py
calmmm/transforms/: adstock.py  saturation.py  scaling.py  seasonality.py
docs/: DEPLOYMENT_GUIDE.md  END_TO_END_WORKFLOW.md  USER_GUIDE.md
docs/superpowers/plans/: 2026-06-16-calmmm-plan-1-foundation.md  2026-06-17-calmmm-plan-2-model.md  2026-06-17-calmmm-plan-3-calibration.md  2026-06-20-calmmm-plan-4a-attribution.md  2026-06-29-calmmm-demo-deck.md
outputs/: calmmm_demo_walkthrough.pptx  calmmm_sample_lift_tests.csv  calmmm_sample_weekly_panel.csv
reporting/: saturation_curves.csv  spend_response.csv  summary_table.csv
scripts/: run_demo_fit.py
tests/: conftest.py  test_run_demo_fit.py
tests/attribution/: test_contributions.py  test_curves.py  test_roi.py
tests/calibration/: test_lift.py  test_likelihood.py  test_targets.py
tests/data/: test_containers.py  test_validation.py
tests/model/: test_components.py  test_coords.py  test_fit.py  test_mmm.py  test_priors.py  test_transforms.py
tests/reporting/: test_visualization.py
tests/transforms/: test_adstock.py  test_saturation.py  test_scaling.py  test_seasonality.py
(+2 files in other folders)
