[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calmmm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pymc>=5.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "arviz>=0.16",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
